--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ header {
 }
 nav {
     border-bottom: 2px solid black;
+    position: relative;
+    height: 100%;
+    width: 100%;
+
+
 }    
 .sections ol {
     list-style-type: none;
