--- a/style.css
+++ b/style.css
@@ -1,18 +1,14 @@
-header {
-    background-color: lightskyblue;
-    text-align: left;
-}
 nav {
     border-bottom: 2px solid black;
     position: relative;
-    height: 100%;
+    height: 80px;
     width: 100%;
-
-
+    background-color: dodgerblue;
 }    
 .sections ol {
     list-style-type: none;
     padding-left: 0;
+   
 }
 .section {
     display: inline-block;
@@ -23,6 +19,7 @@ body {
     color: black;
     font-size: 25px;
     text-align: center;
+    
 }
 .dark-mode {
     background-color: black;
@@ -33,4 +30,8 @@ body {
 }
 h2 {
     font-weight: 900;
+}
+.contact {
+    text-align: center;
+    font-size: 25px;
 }
