--- a/style.css
+++ b/style.css
@@ -1,13 +1,20 @@
-nav {
+.nav {
     border-bottom: 2px solid black;
-    position: relative;
-    height: 80px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 110px;
     width: 100%;
     background-color: dodgerblue;
+    margin-top: 0px;
+    overflow: hidden;
 }    
 .sections ol {
     list-style-type: none;
     padding-left: 0;
+    float: left;
+    display: block;
+    padding: 14px;
    
 }
 .section {
@@ -19,7 +26,9 @@ body {
     color: black;
     font-size: 25px;
     text-align: center;
-    
+    height: 100vh;
+    width: 100%;
+    margin: 0;
 }
 .dark-mode {
     background-color: black;
@@ -34,4 +43,23 @@ h2 {
 .contact {
     text-align: center;
     font-size: 25px;
+}
+.header {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+    text-align: center;
+}
+.section a:hover{
+    color: darkgray;
+}
+.section a.active{
+    
+}
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
